trigger input event

--- a/demo.html
+++ b/demo.html
@@ -25,6 +25,7 @@
         //numberType: "MOBILE",
         //onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
         //preferredCountries: ['cn', 'jp'],
+        //preventInvalidNumbers: true,
         //responsiveDropdown: true,
         utilsScript: "lib/libphonenumber/build/utils.js"
       });
