fix issue with minifier and init options being ignored

--- a/demo.html
+++ b/demo.html
@@ -20,7 +20,8 @@
       $("#mobile-number").intlTelInput({
         //autoFormat: false,
         //autoHideDialCode: false,
-        //defaultCountry: "jp",
+        //defaultCountry: "auto",
+        //ipinfoToken: "yolo",
         //nationalMode: true,
         //numberType: "MOBILE",
         //onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
