default nationalMode to true and remove responsiveDropdown option

--- a/demo.html
+++ b/demo.html
@@ -22,12 +22,11 @@
         //autoHideDialCode: false,
         //defaultCountry: "auto",
         //ipinfoToken: "yolo",
-        //nationalMode: true,
+        //nationalMode: false,
         //numberType: "MOBILE",
         //onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
         //preferredCountries: ['cn', 'jp'],
         //preventInvalidNumbers: true,
-        //responsiveDropdown: true,
         utilsScript: "lib/libphonenumber/build/utils.js"
       });
     </script>
