--- a/demo.html
+++ b/demo.html
@@ -27,6 +27,7 @@
         //onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
         //preferredCountries: ['cn', 'jp'],
         //preventInvalidNumbers: true,
+        //preventInvalidDialCodes: true,
         utilsScript: "lib/libphonenumber/build/utils.js"
       });
     </script>
