--- a/demo.html
+++ b/demo.html
@@ -20,6 +20,7 @@
       $("#mobile-number").intlTelInput({
         //autoFormat: false,
         //autoHideDialCode: false,
+        //autoPlaceholder: false,
         //defaultCountry: "auto",
         //ipinfoToken: "yolo",
         //nationalMode: false,
