dont add ext on last digit of valid num, only on next char

--- a/demo.html
+++ b/demo.html
@@ -18,6 +18,7 @@
     <script src="build/js/intlTelInput.js"></script>
     <script>
       $("#mobile-number").intlTelInput({
+        //allowExtensions: true,
         //autoFormat: false,
         //autoHideDialCode: false,
         //autoPlaceholder: false,
