--- a/spec.html
+++ b/spec.html
@@ -58,6 +58,8 @@
   
   <script src="src/spec/tests/options/preferredCountries.js"></script>
   
+  <script src="src/spec/tests/options/submitCountryCode.js"></script>
+  
   <script src="src/spec/tests/options/utilsScript.js"></script>
   
   <script src="src/spec/tests/vanilla/core.js"></script>
