if they have cookie plugin, store auto country in cookie

--- a/demo.html
+++ b/demo.html
@@ -9,7 +9,7 @@
   <body>
     <h1>International Telephone Input</h1>
     <form>
-      <input id="mobile-number" type="tel">
+      <input id="phone" type="tel">
       <button type="submit">Submit</button>
     </form>
 
@@ -17,7 +17,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="build/js/intlTelInput.js"></script>
     <script>
-      $("#mobile-number").intlTelInput({
+      $("#phone").intlTelInput({
         //allowExtensions: true,
         //autoFormat: false,
         //autoHideDialCode: false,
@@ -28,7 +28,6 @@
         //numberType: "MOBILE",
         //onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
         //preferredCountries: ['cn', 'jp'],
-        //preventInvalidNumbers: true,
         utilsScript: "lib/libphonenumber/build/utils.js"
       });
     </script>
