Remove jQuery dependency
The library now works without jQuery using native Javascript.
jQuery is now only a development dependency for tests using
jasmine-jquery matchers.

However, the jQuery plugin is still added if jQuery is defined.

Some caveats:
1- I am not very confident of src/js/wrapper.js.ejs correctness.
2- The minimized version produces errors when jQuery is not defined
  while the non-minfied version works correctly. This is probably
  because of some hacky behavior in the tooling. Most likely in
  grunt/replace.js. In addition, appearantly, replace tasks aren't
  applied to all files (e.g: some files spec/). Anyways, I personally
  think that grunt/replace.js should be replaced by a more
  conventional solution; if library size is so important then all
  scripts that are always used should be concatenated, uglified and
  gzipped.

--- a/demo-with-jquery.html
+++ b/demo-with-jquery.html
@@ -13,9 +13,11 @@
       <button type="submit">Submit</button>
     </form>
 
+    <!-- Load jQuery from CDN so can run demo immediately -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="build/js/intlTelInput.js"></script>
     <script>
-      intlTelInput = new IntlTelInput(document.getElementById("phone"), {
+      $("#phone").intlTelInput({
         //allowExtensions: true,
         //autoFormat: false,
         //autoHideDialCode: false,
