--- a/spec.html
+++ b/spec.html
@@ -34,17 +34,33 @@
   
   <script src="lib/libphonenumber/build/utils.js"></script>
   
+  <script src="src/spec/tests/methods/autoCountryLoaded.js"></script>
+  
   <script src="src/spec/tests/methods/destroy.js"></script>
   
   <script src="src/spec/tests/methods/getCountryData.js"></script>
   
+  <script src="src/spec/tests/methods/getExtension.js"></script>
+  
+  <script src="src/spec/tests/methods/getNumber.js"></script>
+  
+  <script src="src/spec/tests/methods/getNumberType.js"></script>
+  
   <script src="src/spec/tests/methods/getSelectedCountryData.js"></script>
   
+  <script src="src/spec/tests/methods/getValidationError.js"></script>
+  
   <script src="src/spec/tests/methods/isValidNumber.js"></script>
+  
+  <script src="src/spec/tests/methods/loadUtils.js"></script>
   
   <script src="src/spec/tests/methods/selectCountry.js"></script>
   
   <script src="src/spec/tests/methods/setNumber.js"></script>
+  
+  <script src="src/spec/tests/methods/utilsLoaded.js"></script>
+  
+  <script src="src/spec/tests/methods/version.js"></script>
   
   <script src="src/spec/tests/options/autoFormat.js"></script>
   
