--- a/demo.html
+++ b/demo.html
@@ -33,6 +33,7 @@
         //numberType: "MOBILE",
         //onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
         //preferredCountries: ['cn', 'jp'],
+        //rtl: true,
         utilsScript: "lib/libphonenumber/build/utils.js"
       });
     </script>
