--- a/spec.html
+++ b/spec.html
@@ -44,6 +44,8 @@
   
   <script src="src/spec/tests/methods/selectCountry.js"></script>
   
+  <script src="src/spec/tests/methods/setCountryData.js"></script>
+  
   <script src="src/spec/tests/methods/setNumber.js"></script>
   
   <script src="src/spec/tests/options/autoFormat.js"></script>
