--- a/examples/gen/national-mode.html
+++ b/examples/gen/national-mode.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Example: National Mode</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1433497107037">
-    <link rel="stylesheet" href="../../build/css/demo.css?1433497107037">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1450474669660">
+    <link rel="stylesheet" href="../../build/css/demo.css?1450474669660">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -25,7 +25,7 @@
   <body>
     <a href="/intl-tel-input.html">Back</a>
     <h1>Example: National Mode</h1>
-    <p>Allow users to enter their national number, and then convert it to international format using the public method getCleanNumber.</p>
+    <p>Allow users to enter their national number, and then convert it to international format using the public method getNumber.</p>
     
     <h2>Markup</h2>
     <pre><code class="language-markup">&lt;p id=&quot;output&quot;&gt;Please enter a number below&lt;/p&gt;
@@ -58,7 +58,7 @@ input.on(&quot;keyup change&quot;, function() {
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1433497107037"></script>
-    <script src="../js/nationalMode.js?1433497107037"></script>
+    <script src="../../build/js/intlTelInput.js?1450474669660"></script>
+    <script src="../js/nationalMode.js?1450474669660"></script>
   </body>
 </html>
