--- a/examples/gen/country-sync.html
+++ b/examples/gen/country-sync.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Example: Country sync</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1433497107037">
-    <link rel="stylesheet" href="../../build/css/demo.css?1433497107037">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1450474669660">
+    <link rel="stylesheet" href="../../build/css/demo.css?1450474669660">
     
-      <link rel="stylesheet" href="../css/countrySync.css?1433497107037">
+      <link rel="stylesheet" href="../css/countrySync.css?1450474669660">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -72,9 +72,8 @@ telInput.change();
 // listen to the address dropdown for changes
 addressDropdown.change(function() {
   var countryCode = $(this).val();
-  telInput.intlTelInput(&quot;selectCountry&quot;, countryCode);
-});
-</code></pre>
+  telInput.intlTelInput(&quot;setCountry&quot;, countryCode);
+});</code></pre>
 
     <h2>Result</h2>
     <div id="result">
@@ -95,7 +94,7 @@ addressDropdown.change(function() {
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1433497107037"></script>
-    <script src="../js/countrySync.js?1433497107037"></script>
+    <script src="../../build/js/intlTelInput.js?1450474669660"></script>
+    <script src="../js/countrySync.js?1450474669660"></script>
   </body>
 </html>
