--- a/demo.html
+++ b/demo.html
@@ -19,13 +19,13 @@
     <script>
       $("#phone").intlTelInput({
         // allowExtensions: true,
-        // autoFormat: false,
+        // autoFormat: true,
         // autoHideDialCode: false,
         // autoPlaceholder: false,
-        // dropdownContainer: $("body"),
+        // dropdownContainer: "body",
         // excludeCountries: ["us"],
         // geoIpLookup: function(callback) {
-        //   $.get('http://ipinfo.io', function() {}, "jsonp").always(function(resp) {
+        //   $.get("http://ipinfo.io", function() {}, "jsonp").always(function(resp) {
         //     var countryCode = (resp && resp.country) ? resp.country : "";
         //     callback(countryCode);
         //   });
