got rid of bower and moved utils.js into src/build dirs

--- a/demo.html
+++ b/demo.html
@@ -35,7 +35,7 @@
         // numberType: "MOBILE",
         // onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
         // preferredCountries: ['cn', 'jp'],
-        utilsScript: "lib/libphonenumber/build/utils.js"
+        utilsScript: "build/js/utils.js"
       });
     </script>
   </body>
