--- a/examples/gen/modify-country-data.html
+++ b/examples/gen/modify-country-data.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Example: Modify country data</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1452529518601">
-    <link rel="stylesheet" href="../../build/css/demo.css?1452529518601">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1454431324268">
+    <link rel="stylesheet" href="../../build/css/demo.css?1454431324268">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -36,7 +36,7 @@ $.each(countryData, function(i, country) {
   country.name = country.name.replace(/.+\((.+)\)/,&quot;$1&quot;);
 });
 $(&quot;#phone&quot;).intlTelInput({
-  utilsScript: &quot;../../lib/libphonenumber/build/utils.js&quot; // just for formatting/placeholders etc
+  utilsScript: &quot;../../build/js/utils.js&quot; // just for formatting/placeholders etc
 });
 </code></pre>
 
@@ -47,7 +47,7 @@ $(&quot;#phone&quot;).intlTelInput({
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1452529518601"></script>
-    <script src="../js/modifyCountryData.js?1452529518601"></script>
+    <script src="../../build/js/intlTelInput.js?1454431324268"></script>
+    <script src="../js/modifyCountryData.js?1454431324268"></script>
   </body>
 </html>
