--- a/spec.html
+++ b/spec.html
@@ -22,9 +22,9 @@
   
   <script src=".grunt/grunt-contrib-jasmine/boot.js"></script>
   
-  <script src="lib/jquery/jquery.js"></script>
+  <script src="node_modules/jquery/dist/jquery.js"></script>
   
-  <script src="lib/jasmine-jquery/jasmine-jquery.js"></script>
+  <script src="node_modules/jasmine-jquery/lib/jasmine-jquery.js"></script>
   
   <script src="src/spec/helpers/helpers.js"></script>
   
@@ -32,7 +32,7 @@
   
   <script src="build/js/intlTelInput.min.js"></script>
   
-  <script src="lib/libphonenumber/build/utils.js"></script>
+  <script src="build/js/utils.js"></script>
   
   <script src="src/spec/tests/methods/destroy.js"></script>
   
