--- a/examples/gen/default-country-ip.html
+++ b/examples/gen/default-country-ip.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Example: Lookup user&#39;s country</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1452529518601">
-    <link rel="stylesheet" href="../../build/css/demo.css?1452529518601">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1454431324268">
+    <link rel="stylesheet" href="../../build/css/demo.css?1454431324268">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -39,7 +39,7 @@
       callback(countryCode);
     });
   },
-  utilsScript: &quot;../../lib/libphonenumber/build/utils.js&quot; // just for formatting/placeholders etc
+  utilsScript: &quot;../../build/js/utils.js&quot; // just for formatting/placeholders etc
 });</code></pre>
 
     <h2>Result</h2>
@@ -49,7 +49,7 @@
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1452529518601"></script>
-    <script src="../js/defaultCountryIp.js?1452529518601"></script>
+    <script src="../../build/js/intlTelInput.js?1454431324268"></script>
+    <script src="../js/defaultCountryIp.js?1454431324268"></script>
   </body>
 </html>
