--- a/examples/gen/hidden-input.html
+++ b/examples/gen/hidden-input.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Example: Submitting the full international number when in nationalMode</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1452529518601">
-    <link rel="stylesheet" href="../../build/css/demo.css?1452529518601">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1454431324268">
+    <link rel="stylesheet" href="../../build/css/demo.css?1454431324268">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -36,7 +36,7 @@
 
     <h2>Code</h2>
     <pre><code class="language-javascript">$(&quot;#phone&quot;).intlTelInput({
-  utilsScript: &quot;../../lib/libphonenumber/build/utils.js&quot; // just for formatting/placeholders etc
+  utilsScript: &quot;../../build/js/utils.js&quot; // just for formatting/placeholders etc
 });
 
 // update the hidden input on submit
@@ -55,7 +55,7 @@ $(&quot;form&quot;).submit(function() {
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1452529518601"></script>
-    <script src="../js/hiddenInput.js?1452529518601"></script>
+    <script src="../../build/js/intlTelInput.js?1454431324268"></script>
+    <script src="../js/hiddenInput.js?1454431324268"></script>
   </body>
 </html>
