--- a/examples/gen/is-valid-number.html
+++ b/examples/gen/is-valid-number.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Example: Validation</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1452529518601">
-    <link rel="stylesheet" href="../../build/css/demo.css?1452529518601">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1454431324268">
+    <link rel="stylesheet" href="../../build/css/demo.css?1454431324268">
     
-      <link rel="stylesheet" href="../css/isValidNumber.css?1452529518601">
+      <link rel="stylesheet" href="../css/isValidNumber.css?1454431324268">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -41,7 +41,7 @@
 
 // initialise plugin
 telInput.intlTelInput({
-  utilsScript: &quot;../../lib/libphonenumber/build/utils.js&quot;
+  utilsScript: &quot;../../build/js/utils.js&quot;
 });
 
 var reset = function() {
@@ -75,7 +75,7 @@ telInput.on(&quot;keyup change&quot;, reset);</code></pre>
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1452529518601"></script>
-    <script src="../js/isValidNumber.js?1452529518601"></script>
+    <script src="../../build/js/intlTelInput.js?1454431324268"></script>
+    <script src="../js/isValidNumber.js?1454431324268"></script>
   </body>
 </html>
