rename autoFormat to formatAsYouType and remove certain checks accordingly

--- a/demo.html
+++ b/demo.html
@@ -1,42 +1,45 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>International Telephone Input</title>
-    <link rel="stylesheet" href="build/css/intlTelInput.css">
-    <link rel="stylesheet" href="build/css/demo.css">
-  </head>
-  <body>
-    <h1>International Telephone Input</h1>
-    <form>
-      <input id="phone" type="tel">
-      <button type="submit">Submit</button>
-    </form>
 
-    <!-- Load jQuery from CDN so can run demo immediately -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="build/js/intlTelInput.js"></script>
-    <script>
-      $("#phone").intlTelInput({
-        // allowExtensions: true,
-        // autoFormat: true,
-        // autoHideDialCode: false,
-        // autoPlaceholder: false,
-        // dropdownContainer: "body",
-        // excludeCountries: ["us"],
-        // geoIpLookup: function(callback) {
-        //   $.get("http://ipinfo.io", function() {}, "jsonp").always(function(resp) {
-        //     var countryCode = (resp && resp.country) ? resp.country : "";
-        //     callback(countryCode);
-        //   });
-        // },
-        // initialCountry: "auto",
-        // nationalMode: false,
-        // numberType: "MOBILE",
-        // onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
-        // preferredCountries: ['cn', 'jp'],
-        utilsScript: "build/js/utils.js"
-      });
-    </script>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>International Telephone Input</title>
+  <link rel="stylesheet" href="build/css/intlTelInput.css">
+  <link rel="stylesheet" href="build/css/demo.css">
+</head>
+
+<body>
+  <h1>International Telephone Input</h1>
+  <form>
+    <input id="phone" type="tel" value="+17024182678B">
+    <button type="submit">Submit</button>
+  </form>
+
+  <!-- Load jQuery from CDN so can run demo immediately -->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="build/js/intlTelInput.js"></script>
+  <script>
+    $("#phone").intlTelInput({
+      // allowExtensions: true,
+      // formatAsYouType: true,
+      // autoHideDialCode: false,
+      // autoPlaceholder: false,
+      // dropdownContainer: "body",
+      // excludeCountries: ["us"],
+      // geoIpLookup: function(callback) {
+      //   $.get("http://ipinfo.io", function() {}, "jsonp").always(function(resp) {
+      //     var countryCode = (resp && resp.country) ? resp.country : "";
+      //     callback(countryCode);
+      //   });
+      // },
+      // initialCountry: "auto",
+      // nationalMode: false,
+      // numberType: "MOBILE",
+      // onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
+      // preferredCountries: ['cn', 'jp'],
+      utilsScript: "build/js/utils.js"
+    });
+  </script>
+</body>
+
 </html>
