removed formatAsYouType, allowExtensions and getExtension

--- a/spec.html
+++ b/spec.html
@@ -30,7 +30,7 @@
   
   <script src="src/js/data.js"></script>
   
-  <script src="build/js/intlTelInput.min.js"></script>
+  <script src="build/js/intlTelInput.js"></script>
   
   <script src="build/js/utils.js"></script>
   
@@ -46,13 +46,9 @@
   
   <script src="src/spec/tests/methods/setNumber.js"></script>
   
-  <script src="src/spec/tests/options/allowExtensions.js"></script>
-  
   <script src="src/spec/tests/options/autoHideDialCode.js"></script>
   
   <script src="src/spec/tests/options/defaultCountry.js"></script>
-  
-  <script src="src/spec/tests/options/formatAsYouType.js"></script>
   
   <script src="src/spec/tests/options/nationalMode.js"></script>
   
