--- a/examples/gen/country-sync.html
+++ b/examples/gen/country-sync.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Example: Country sync</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1454431324268">
-    <link rel="stylesheet" href="../../build/css/demo.css?1454431324268">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1455225389933">
+    <link rel="stylesheet" href="../../build/css/demo.css?1455225389933">
     
-      <link rel="stylesheet" href="../css/countrySync.css?1454431324268">
+      <link rel="stylesheet" href="../css/countrySync.css?1455225389933">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -61,13 +61,13 @@ $.each(countryData, function(i, country) {
 });
 
 // listen to the telephone input for changes
-telInput.on(&quot;country-change&quot;, function() {
+telInput.on(&quot;countrychange&quot;, function() {
   var countryCode = telInput.intlTelInput(&quot;getSelectedCountryData&quot;).iso2;
   addressDropdown.val(countryCode);
 });
 
 // trigger a fake &quot;change&quot; event now, to trigger an initial sync
-telInput.trigger(&quot;country-change&quot;);
+telInput.trigger(&quot;countrychange&quot;);
 
 // listen to the address dropdown for changes
 addressDropdown.change(function() {
@@ -95,7 +95,7 @@ addressDropdown.change(function() {
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1454431324268"></script>
-    <script src="../js/countrySync.js?1454431324268"></script>
+    <script src="../../build/js/intlTelInput.js?1455225389933"></script>
+    <script src="../js/countrySync.js?1455225389933"></script>
   </body>
 </html>
