--- a/spec.html
+++ b/spec.html
@@ -30,7 +30,7 @@
   
   <script src="src/js/data.js"></script>
   
-  <script src="build/js/intlTelInput.js"></script>
+  <script src="build/js/intlTelInput.min.js"></script>
   
   <script src="build/js/utils.js"></script>
   
