--- a/demo.html
+++ b/demo.html
@@ -16,16 +16,14 @@
   </form>
 
   <!-- Load jQuery from CDN so can run demo immediately -->
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="build/js/intlTelInput.js"></script>
   <script>
     $("#phone").intlTelInput({
-      // allowExtensions: true,
       // autoHideDialCode: false,
       // autoPlaceholder: false,
       // dropdownContainer: "body",
       // excludeCountries: ["us"],
-      // formatAsYouType: true,
       // geoIpLookup: function(callback) {
       //   $.get("http://ipinfo.io", function() {}, "jsonp").always(function(resp) {
       //     var countryCode = (resp && resp.country) ? resp.country : "";
