--- a/spec.html
+++ b/spec.html
@@ -48,6 +48,8 @@
   
   <script src="src/spec/tests/options/autoHideDialCode.js"></script>
   
+  <script src="src/spec/tests/options/autoPlaceholder.js"></script>
+  
   <script src="src/spec/tests/options/initialCountry.js"></script>
   
   <script src="src/spec/tests/options/nationalMode.js"></script>
@@ -59,6 +61,8 @@
   <script src="src/spec/tests/options/utilsScript.js"></script>
   
   <script src="src/spec/tests/vanilla/core.js"></script>
+  
+  <script src="src/spec/tests/vanilla/countrychangeEvent.js"></script>
   
   <script src="src/spec/tests/vanilla/keyboardShortcuts.js"></script>
   
