added dropdownContainer tests

--- a/spec.html
+++ b/spec.html
@@ -50,6 +50,8 @@
   
   <script src="src/spec/tests/options/autoPlaceholder.js"></script>
   
+  <script src="src/spec/tests/options/dropdownContainer.js"></script>
+  
   <script src="src/spec/tests/options/initialCountry.js"></script>
   
   <script src="src/spec/tests/options/nationalMode.js"></script>
