--- a/spec.html
+++ b/spec.html
@@ -52,6 +52,8 @@
   
   <script src="src/spec/tests/options/dropdownContainer.js"></script>
   
+  <script src="src/spec/tests/options/excludeCountries.js"></script>
+  
   <script src="src/spec/tests/options/initialCountry.js"></script>
   
   <script src="src/spec/tests/options/nationalMode.js"></script>
