--- a/demo.html
+++ b/demo.html
@@ -20,6 +20,7 @@
   <script src="build/js/intlTelInput.js"></script>
   <script>
     $("#phone").intlTelInput({
+      // allowDropdown: false,
       // autoHideDialCode: false,
       // autoPlaceholder: false,
       // dropdownContainer: "body",
