initial work - displaying dial code

--- a/demo.html
+++ b/demo.html
@@ -36,6 +36,7 @@
       // numberType: "MOBILE",
       // onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
       // preferredCountries: ['cn', 'jp'],
+      separateDialCode: true,
       utilsScript: "build/js/utils.js"
     });
   </script>
