--- a/demo.html
+++ b/demo.html
@@ -36,7 +36,7 @@
       // numberType: "MOBILE",
       // onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
       // preferredCountries: ['cn', 'jp'],
-      separateDialCode: true,
+      // separateDialCode: true,
       utilsScript: "build/js/utils.js"
     });
   </script>
