--- a/spec.html
+++ b/spec.html
@@ -58,6 +58,8 @@
   
   <script src="src/spec/tests/options/nationalMode.js"></script>
   
+  <script src="src/spec/tests/options/numberType.js"></script>
+  
   <script src="src/spec/tests/options/onlyCountries.js"></script>
   
   <script src="src/spec/tests/options/preferredCountries.js"></script>
