--- a/spec.html
+++ b/spec.html
@@ -54,6 +54,8 @@
   
   <script src="src/spec/tests/options/excludeCountries.js"></script>
   
+  <script src="src/spec/tests/options/geoIpLookup.js"></script>
+  
   <script src="src/spec/tests/options/initialCountry.js"></script>
   
   <script src="src/spec/tests/options/nationalMode.js"></script>
