--- a/spec.html
+++ b/spec.html
@@ -7,6 +7,8 @@
 
   <link rel="stylesheet" type="text/css" href=".grunt/grunt-contrib-jasmine/jasmine.css">
 
+  <link rel="stylesheet" type="text/css" href="build/css/intlTelInput.css">
+
 
 </head>
 <body>
@@ -45,6 +47,8 @@
   <script src="src/spec/tests/methods/setCountry.js"></script>
   
   <script src="src/spec/tests/methods/setNumber.js"></script>
+  
+  <script src="src/spec/tests/options/allowDropdown.js"></script>
   
   <script src="src/spec/tests/options/autoHideDialCode.js"></script>
   
