--- a/spec.html
+++ b/spec.html
@@ -70,6 +70,8 @@
   
   <script src="src/spec/tests/options/preferredCountries.js"></script>
   
+  <script src="src/spec/tests/options/separateDialCode.js"></script>
+  
   <script src="src/spec/tests/options/utilsScript.js"></script>
   
   <script src="src/spec/tests/vanilla/core.js"></script>
