added tests for formatOnInit

--- a/spec.html
+++ b/spec.html
@@ -58,6 +58,8 @@
   
   <script src="src/spec/tests/options/excludeCountries.js"></script>
   
+  <script src="src/spec/tests/options/formatOnInit.js"></script>
+  
   <script src="src/spec/tests/options/geoIpLookup.js"></script>
   
   <script src="src/spec/tests/options/initialCountry.js"></script>
