added tests for getExtension method

--- a/spec.html
+++ b/spec.html
@@ -40,6 +40,8 @@
   
   <script src="src/spec/tests/methods/getCountryData.js"></script>
   
+  <script src="src/spec/tests/methods/getExtension.js"></script>
+  
   <script src="src/spec/tests/methods/getSelectedCountryData.js"></script>
   
   <script src="src/spec/tests/methods/isValidNumber.js"></script>
