added loadUtils tests

--- a/spec.html
+++ b/spec.html
@@ -36,7 +36,63 @@
   
   <script src="build/js/utils.js"></script>
   
+  <script src="src/spec/tests/methods/destroy.js"></script>
+  
+  <script src="src/spec/tests/methods/getExtension.js"></script>
+  
+  <script src="src/spec/tests/methods/getNumber.js"></script>
+  
+  <script src="src/spec/tests/methods/getNumberType.js"></script>
+  
+  <script src="src/spec/tests/methods/getSelectedCountryData.js"></script>
+  
   <script src="src/spec/tests/methods/getValidationError.js"></script>
+  
+  <script src="src/spec/tests/methods/isValidNumber.js"></script>
+  
+  <script src="src/spec/tests/methods/setCountry.js"></script>
+  
+  <script src="src/spec/tests/methods/setNumber.js"></script>
+  
+  <script src="src/spec/tests/options/allowDropdown.js"></script>
+  
+  <script src="src/spec/tests/options/autoHideDialCode.js"></script>
+  
+  <script src="src/spec/tests/options/autoPlaceholder.js"></script>
+  
+  <script src="src/spec/tests/options/dropdownContainer.js"></script>
+  
+  <script src="src/spec/tests/options/excludeCountries.js"></script>
+  
+  <script src="src/spec/tests/options/formatOnInit.js"></script>
+  
+  <script src="src/spec/tests/options/geoIpLookup.js"></script>
+  
+  <script src="src/spec/tests/options/initialCountry.js"></script>
+  
+  <script src="src/spec/tests/options/nationalMode.js"></script>
+  
+  <script src="src/spec/tests/options/numberType.js"></script>
+  
+  <script src="src/spec/tests/options/onlyCountries.js"></script>
+  
+  <script src="src/spec/tests/options/preferredCountries.js"></script>
+  
+  <script src="src/spec/tests/options/separateDialCode.js"></script>
+  
+  <script src="src/spec/tests/options/utilsScript.js"></script>
+  
+  <script src="src/spec/tests/static/getCountryData.js"></script>
+  
+  <script src="src/spec/tests/static/loadUtils.js"></script>
+  
+  <script src="src/spec/tests/vanilla/core.js"></script>
+  
+  <script src="src/spec/tests/vanilla/countrychangeEvent.js"></script>
+  
+  <script src="src/spec/tests/vanilla/keyboardShortcuts.js"></script>
+  
+  <script src="src/spec/tests/vanilla/multipleInstances.js"></script>
   
   <script src=".grunt/grunt-contrib-jasmine/reporter.js"></script>
   
