added default for customPlaceholder and tests

--- a/spec.html
+++ b/spec.html
@@ -72,6 +72,8 @@
   
   <script src="src/spec/tests/options/autoPlaceholder.js"></script>
   
+  <script src="src/spec/tests/options/customPlaceholder.js"></script>
+  
   <script src="src/spec/tests/options/dropdownContainer.js"></script>
   
   <script src="src/spec/tests/options/excludeCountries.js"></script>
