--- a/examples/gen/country-sync.html
+++ b/examples/gen/country-sync.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Example: Country sync</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1455225389933">
-    <link rel="stylesheet" href="../../build/css/demo.css?1455225389933">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1456859475147">
+    <link rel="stylesheet" href="../../build/css/demo.css?1456859475147">
     
-      <link rel="stylesheet" href="../css/countrySync.css?1455225389933">
+      <link rel="stylesheet" href="../css/countrySync.css?1456859475147">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -59,20 +59,18 @@ telInput.intlTelInput({
 $.each(countryData, function(i, country) {
   addressDropdown.append($(&quot;&lt;option&gt;&lt;/option&gt;&quot;).attr(&quot;value&quot;, country.iso2).text(country.name));
 });
+// set it&#39;s initial value
+var initialCountry = telInput.intlTelInput(&quot;getSelectedCountryData&quot;).iso2;
+addressDropdown.val(initialCountry);
 
 // listen to the telephone input for changes
-telInput.on(&quot;countrychange&quot;, function() {
-  var countryCode = telInput.intlTelInput(&quot;getSelectedCountryData&quot;).iso2;
-  addressDropdown.val(countryCode);
+telInput.on(&quot;countrychange&quot;, function(e, countryData) {
+  addressDropdown.val(countryData.iso2);
 });
-
-// trigger a fake &quot;change&quot; event now, to trigger an initial sync
-telInput.trigger(&quot;countrychange&quot;);
 
 // listen to the address dropdown for changes
 addressDropdown.change(function() {
-  var countryCode = $(this).val();
-  telInput.intlTelInput(&quot;setCountry&quot;, countryCode);
+  telInput.intlTelInput(&quot;setCountry&quot;, $(this).val());
 });
 </code></pre>
 
@@ -95,7 +93,7 @@ addressDropdown.change(function() {
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1455225389933"></script>
-    <script src="../js/countrySync.js?1455225389933"></script>
+    <script src="../../build/js/intlTelInput.js?1456859475147"></script>
+    <script src="../js/countrySync.js?1456859475147"></script>
   </body>
 </html>
