--- a/spec.html
+++ b/spec.html
@@ -68,6 +68,8 @@
   
   <script src="src/spec/tests/options/allowDropdown.js"></script>
   
+  <script src="src/spec/tests/options/allowPlaceholderOverwrite.js"></script>
+  
   <script src="src/spec/tests/options/autoHideDialCode.js"></script>
   
   <script src="src/spec/tests/options/autoPlaceholder.js"></script>
